name:                testvec
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/testvec#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Testvec
  build-depends:       base >= 4.7 && < 5,
                       pretty,language-c,pretty-show
  default-language:    Haskell2010

executable testvec-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , testvec,language-c
  default-language:    Haskell2010

test-suite testvec-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , testvec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/theoremprover/testvec
